other/deny-default-service-accounts/.chainsaw-test/goodpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  serviceAccountName: custom-service-account
  containers:
  - image: nginx
    name: goodpod01
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  serviceAccountName: custom-service-account
  containers:
  - image: nginx
    name: goodpod02
