other/deny-default-service-accounts/.chainsaw-test/testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  serviceAccountName: custom-service-account
  containers:
  - name: goodpod01
    image: dummyimage
