other/deny-default-service-accounts/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-default-service-accounts
status:
  ready: true
